--- a/DinoForm2/i18n/default.json
+++ b/DinoForm2/i18n/default.json
@@ -9,6 +9,7 @@
   "GMCM_Option_StaminaUse_Name": "Stamina Use",
   "GMCM_Option_FireDamage_Name": "Fire Damage",
   "GMCM_Option_FireDistance_Name": "Fire Distance",
+  "GMCM_Option_Duration_Name": "Buff Duration",
   "GMCM_Option_TransformSound_Name": "Transform Sound",
   "GMCM_Option_FireSound_Name": "Mod",
   "dino-form": "Dino Form",
