--- a/FrenshipRings/[CP] FrenshipRings/i18n/default.json
+++ b/FrenshipRings/[CP] FrenshipRings/i18n/default.json
@@ -1,87 +1,103 @@
 ﻿{
-  "mod.description": "Rings that summon critters...and maybe do a little more.",
-  // For GMCM
-  "IllFormatedConfig": "Config file seems ill-formated, using default. Please use Generic Mod Config Menu to configure.",
+    "mod.description": "Rings that summon critters...and maybe do a little more.",
+    // For GMCM
+    "IllFormatedConfig": "Config file seems ill-formated, using default. Please use Generic Mod Config Menu to configure.",
 
-  "CritterSpawnMultiplier.title": "Critter Spawn Multiplier",
-  "CritterSpawnMultiplier.description": "Set higher to have more critters spawn",
+    "CritterSpawnMultiplier.title": "Critter Spawn Multiplier",
+    "CritterSpawnMultiplier.description": "Set higher to have more critters spawn",
 
-  "ButterflyRing.title": "Butterfly Ring Options",
-  "BunnyRing.title": "Bunny Ring Options",
-  "FrogRing.title": "Frog Ring Options",
-  "OwlRing.title": "Owl Ring Options",
+    "ButterflyRing.title": "Butterfly Ring Options",
+    "BunnyRing.title": "Bunny Ring Options",
+    "FrogRing.title": "Frog Ring Options",
+    "OwlRing.title": "Owl Ring Options",
 
-  "ButterfliesSpawnInRain.title": "Butterflies Spawn In Rain",
-  "ButterfliesSpawnInRain.description": "If enabled, butterflies spawn in rain. If disabled, they'll only spawn in sunny weather.",
+    "ButterfliesSpawnInRain.title": "Butterflies Spawn In Rain",
+    "ButterfliesSpawnInRain.description": "If enabled, butterflies spawn in rain. If disabled, they'll only spawn in sunny weather.",
 
-  "PlayAudioEffects.title": "Play Audio Effects",
-  "PlayAudioEffects.description": "Whether or not to play the audio effects from this mod.",
+    "PlayAudioEffects.title": "Play Audio Effects",
+    "PlayAudioEffects.description": "Whether or not to play the audio effects from this mod.",
 
-  "BunnyRingStamina.title": "Bunny Ring Stamina",
-  "BunnyRingStamina.description": "The cost in stamina for a single bunny ring boost.",
+    "BunnyRingStamina.title": "Bunny Ring Stamina",
+    "BunnyRingStamina.description": "The cost in stamina for a single bunny ring boost.",
 
-  "BunnyRingBoost.title": "Bunny Ring Boost",
-  "BunnyRingBoost.description": "The amount of speed the bunny ring boost provides.",
+    "BunnyRingBoost.title": "Bunny Ring Boost",
+    "BunnyRingBoost.description": "The amount of speed the bunny ring boost provides.",
 
-  "BunnyRingButton.title": "Bunny Ring Button",
-  "BunnyRingButton.description": "The button used to trigger the bunny ring's sprint.",
+    "BunnyRingButton.title": "Bunny Ring Button",
+    "BunnyRingButton.description": "The button used to trigger the bunny ring's sprint.",
 
-  "FrogRingButton.title": "Frog Ring Button",
-  "FrogRingButton.description": "The button used to trigger the frog ring's jump.",
+    "FrogRingButton.title": "Frog Ring Button",
+    "FrogRingButton.description": "The button used to trigger the frog ring's jump.",
 
-  "MaxFrogJumpDistance.title": "Max Frog Jump Distance",
-  "MaxFrogJumpDistance.description": "The maximum distance the frog ring will try to jump.",
+    "MaxFrogJumpDistance.title": "Max Frog Jump Distance",
+    "MaxFrogJumpDistance.description": "The maximum distance the frog ring will try to jump.",
 
-  "JumpChargeSpeed.title": "Jump Charge Speed",
-  "JumpChargeSpeed.description": "Adjusts how fast the frog jump charges (ie, goes one tile further.) Higher for faster.",
+    "JumpChargeSpeed.title": "Jump Charge Speed",
+    "JumpChargeSpeed.description": "Adjusts how fast the frog jump charges (ie, goes one tile further.) Higher for faster.",
 
-  "JumpCostsStamina.title": "Jump Costs Stamina",
-  "JumpCostsStamina.description": "If enabled, you'll spend one stamina point per tile traversed.",
+    "JumpCostsStamina.title": "Jump Costs Stamina",
+    "JumpCostsStamina.description": "If enabled, you'll spend one stamina point per tile traversed.",
 
-  "ViewportFollowsTarget.title": "Viewport Follows Target",
-  "ViewportFollowsTarget.descrption": "If enabled, the viewport will follow the target square, not the farmer.",
+    "ViewportFollowsTarget.title": "Viewport Follows Target",
+    "ViewportFollowsTarget.descrption": "If enabled, the viewport will follow the target square, not the farmer.",
 
-  "FrogsSpawnInHeat.title": "Frogs Spawn In Heat",
-  "FrogsSpawnInHeat.description": "If enabled, frogs may spawn in locations that are probably too hot for them, like the lava levels of the mine or the desert.",
+    "FrogsSpawnInHeat.title": "Frogs Spawn In Heat",
+    "FrogsSpawnInHeat.description": "If enabled, frogs may spawn in locations that are probably too hot for them, like the lava levels of the mine or the desert.",
 
-  "FrogsSpawnInCold.title": "Frogs Spawn in Cold",
-  "FrogsSpawnInCold.description": "If enabled, frogs may spawn in cold locations or times, such as the frozen levels in the mines or during winter.",
+    "FrogsSpawnInCold.title": "Frogs Spawn in Cold",
+    "FrogsSpawnInCold.description": "If enabled, frogs may spawn in cold locations or times, such as the frozen levels in the mines or during winter.",
 
-  "FrogsSpawnOnlyInRain.title": "Frogs Spawn Only In Rain",
-  "FrogsSpawnOnlyInRain.description": "If enabled, frogs will only spawn outside in rain.",
+    "FrogsSpawnOnlyInRain.title": "Frogs Spawn Only In Rain",
+    "FrogsSpawnOnlyInRain.description": "If enabled, frogs will only spawn outside in rain.",
 
-  "SaltwaterFrogs.title": "Saltwater Frogs",
-  "SaltwaterFrogs.description": "If enabled, frogs might spawn in saltwater.",
+    "SaltwaterFrogs.title": "Saltwater Frogs",
+    "SaltwaterFrogs.description": "If enabled, frogs might spawn in saltwater.",
 
-  "IndoorFrogs.title": "Indoor Frogs",
-  "IndoorFrogs.description": "If enabled, frogs can spawn indoors.",
+    "IndoorFrogs.title": "Indoor Frogs",
+    "IndoorFrogs.description": "If enabled, frogs can spawn indoors.",
 
-  "OwlsSpawnIndoors.title": "Owls Spawn Indoors",
-  "OwlsSpawnIndoors.description": "If owls should spawn indoors.",
+    "OwlsSpawnIndoors.title": "Owls Spawn Indoors",
+    "OwlsSpawnIndoors.description": "If owls should spawn indoors.",
 
-  "OwlsSpawnDuringDay.title": "Owls Spawn During Day",
-  "OwlsSpawnDuringDay.description": "If owls should spawn during the day.",
+    "OwlsSpawnDuringDay.title": "Owls Spawn During Day",
+    "OwlsSpawnDuringDay.description": "If owls should spawn during the day.",
 
-  "api-not-found": "{{APIID}} not found, integration disabled.",
-  "api-too-old": "Please update {{apiName}}({{APIID}}) to at least version {{minversion}}. Current version {{currentversion}}. Integration disabled.",
+    "api-not-found": "{{APIID}} not found, integration disabled.",
+    "api-too-old": "Please update {{apiName}}({{APIID}}) to at least version {{minversion}}. Current version {{currentversion}}. Integration disabled.",
 
-  // Rings
-  "bunny-ring.name": "Bunny Ring",
-  "bunny-ring.description": "Encourages bunnies to come near you. You learn from their speed.",
-  "bunny-buff.description": "The energy of the local wildlife encourages you. +{{amount}} speed.",
-  "bunny-buff.tired": "Too tired for that!",
+    // Rings
+    "bunny-ring.name": "Bunny Ring",
+    "bunny-ring.description": "Encourages bunnies to come near you. You learn from their speed.",
+    "bunny-buff.description": "The energy of the local wildlife encourages you. +{{amount}} speed.",
+    "bunny-buff.tired": "Too tired for that!",
 
-  "butterfly-ring.name": "Butterfly Ring",
-  "butterfly-ring.description": "During the day, summons butterflies to you. Also, increases magnetism.",
+    "butterfly-ring.name": "Butterfly Ring",
+    "butterfly-ring.description": "During the day, summons butterflies to you. Also, increases magnetism.",
+    "butterfly-buff.description": "+128 Magnetism",
 
-  "firefly-ring.name": "Firefly Ring",
-  "firefly-ring.description": "During the night, summons fireflies to you, and brings you light.",
+    "firefly-ring.name": "Firefly Ring",
+    "firefly-ring.description": "During the night, summons fireflies to you, and brings you light.",
 
-  "owl-ring.name": "Owl Ring",
-  "owl-ring.description": "Encourages owls to come near you. They inspire you to be more stealthy.",
+    "owl-ring.name": "Owl Ring",
+    "owl-ring.description": "Encourages owls to come near you. They inspire you to be more stealthy.",
 
-  "frog-ring.name": "Frog Ring",
-  "frog-ring.description": "Attracts frogs. Makes you feel lighter.",
-  "frog-ring.horse": "Frog ring can't pick up your horse!",
-  "frog-ring.blocked": "The frog can't jump this way."
+    "frog-ring.name": "Frog Ring",
+    "frog-ring.description": "Attracts frogs. Makes you feel lighter.",
+    "frog-ring.horse": "Frog ring can't pick up your horse!",
+    "frog-ring.blocked": "The frog can't jump this way.",
+
+    "shadow-ring.name": "Shadow Ring",
+    "shadow-ring.description": "Surrounds you with a strange aura.",
+
+    "spider-ring.name": "Spider Ring",
+    "spider-ring.description": "Wearing it makes you feel a little creepy.",
+
+    "dustsprite-ring.name": "Dust Sprite Ring",
+    "dustsprite-ring.description": "It looks a little dirty but you don't mind.",
+
+    // Letters
+    "shadow-ring.letter": "@,^If you truly wish to be a friend to the Shadow People, you should have this.  ^   -Krobus %item object {{ModId}}_Shadow 1 %%[#]A Gift From Krobus",
+    "spider-ring.letter": "@,^I found this ring in a cave. Maybe it will be of some use to you.   ^   -Krobus %item object {{ModId}}_Spider 1 %%[#]A Gift From Krobus",
+    "frog-ring.letter": "@,^I was walking through the woods in the rain yesterday, and a frog hopped out of that old abandoned house! I wonder what it was doing in there?   ^   -Seb[#]Seb's Frog Observation",
+    "dustsprite-ring.letter": "@,^I was helping Aunt Marnie clean out the attic and thought I saw lots of dirty little gremlins run and hide, but when I got closer all I found was this ring! Mr. Marlon told me you would know what to do with it.   ^   -Jas %item object {{ModId}}_Dust 1 %%[#]A Gift from Jas"
 }
