i18n token/junimo fix

--- a/FrenshipRings/[CP] FrenshipRings/i18n/default.json
+++ b/FrenshipRings/[CP] FrenshipRings/i18n/default.json
@@ -68,7 +68,7 @@
     // Rings
     "bunny-ring.name": "Bunny Ring",
     "bunny-ring.description": "Encourages bunnies to come near you. You learn from their speed.",
-    "bunny-buff.description": "The energy of the local wildlife encourages you. +{{amount}} speed.",
+    "bunny-buff.description": "The energy of the local wildlife encourages you. +3 speed.",
     "bunny-buff.tired": "Too tired for that!",
 
     "butterfly-ring.name": "Butterfly Ring",
