--- a/MonsterHutch/i18n/default.json
+++ b/MonsterHutch/i18n/default.json
@@ -30,6 +30,6 @@
     "ConfigIncubatorSection": "Monster Incubator",
     "MonsterIncubator.name": "Monster Incubator",
     "MonsterIncubator.description": "Grows monster bits into a friendly sentient monster. Does not work outside a hutch!",
-    "MonsterIncubator.monsterWarning": "Requires {{coalName}}, {{bugMeatName}}, {{batWingName}}, or {{cinderShardName}} to start incubation",
+    "MonsterIncubator.InputWarning": "Requires {{coalName}}, {{bugMeatName}}, {{batWingName}}, or {{cinderShardName}} to start incubation",
     "MonsterIncubator.additionalItemWarning": "Requires {{additionalItemCount}} {{additionalItemName}} to start incubation"
 }
