--- a/MonsterHutch/i18n/default.json
+++ b/MonsterHutch/i18n/default.json
@@ -29,7 +29,7 @@
     "ConfigHutchSection": "Hutch Changes",
     "ConfigIncubatorSection": "Monster Incubator",
     "MonsterIncubator.name": "Monster Incubator",
-    "MonsterIncubator.description": "Grows monster bits into a friendly sentient monster. Does not work outside a hutch!",
-    "MonsterIncubator.InputWarning": "Requires {{coalName}}, {{bugMeatName}}, {{batWingName}}, or {{cinderShardName}} to start incubation",
+    "MonsterIncubator.description": "Grows a variety of monsters based on the input item. Does not work outside a hutch!",
+    "MonsterIncubator.InputWarning": "Requires 10 {{coalName}}, 10 {{bugMeatName}}, 1 {{mummifiedBatName}}, or 10 {{cinderShardName}} to start incubation",
     "MonsterIncubator.additionalItemWarning": "Requires {{additionalItemCount}} {{additionalItemName}} to start incubation"
 }
