--- a/MonsterHutch/i18n/default.json
+++ b/MonsterHutch/i18n/default.json
@@ -7,8 +7,8 @@
     "ConfigHutchInteriorVolcano": "Volcano",
     "ConfigRemovableSlimeHutchIncubator": "Removable Slime Hutch Incubator",
     "ConfigRemovableSlimeHutchIncubatorDescription": "Allows you to remove the default slime incubator in the slime hutch",
-    "ConfigRandomizeMonsterPositionInHutch": "Randomize Monster Position\nIn Hutch Daily",
-    "ConfigRandomizeMonsterPositionInHutchDescription": "Changes the position of all monsters in the hutch, so they are not clumped up in the top left corner",
+    "ConfigRandomizeMonsterPositions": "Randomize Monster Position\nIn Hutch Daily",
+    "ConfigRandomizeMonsterPositionsDescription": "Changes the position of all monsters in the hutch, so they are not clumped up in the top left corner",
     "ConfigRandomizeOnlyModMonsterPositions": "Randomize Monster Position Does\nNot Affect Slimes",
     "ConfigIncubatorIsAffectedByCoopmaster": "Is Affected By Coopmaster",
     "ConfigIncubatorIsAffectedByCoopmasterDescription": "Whether Coopmaster should half the incubation duration (This is the case for base game slime incubator)",
@@ -28,8 +28,30 @@
     "ConfigIncubatorRecipeUnlockDescription": "The unlock method for the incubator recipe. It is on you that stardew valley can parse this as a recipe unlock method!",
     "ConfigHutchSection": "Hutch Changes",
     "ConfigIncubatorSection": "Monster Incubator",
+    "ConfigMonsterDropsSection": "Monster Drops",
+    "ConfigBatFruitRatio": "Bat Fruit-BatWing Ratio",
+    "ConfigBatFruitRatioDescription": "The fruit to bat wing drop ratio for bats (default: 0.3)",
+    "ConfigSpiderBugMeatRatio": "Spider \nBugMeat-VoidEssence Ratio",
+    "ConfigSpiderBugMeatRatioDescription": "The bug meat to void essence drop ratio for spiders (default: 0.7)",
+    "ConfigDustTripleShotRatio": "Dust Sprite \nTripleShot-Coffee Ratio",
+    "ConfigDustTripleShotRatioDescription": "The triple shot espresso to coffee drop ratio for dust sprites (default: 0.3)",
+    "ConfigCinderChance": "Magma Sprite Cinder Node Chance",
+    "ConfigCinderChanceDescription": "The daily chance a magma sprite will drop a cinder shard node (default: 0.5)",
+    "ConfigObsidianChance": "Magma Sprite Obsidian Chance",
+    "ConfigObsidianChanceDescription": "The daily chance a magma sprite will drop obsidian (default: 0.08)",
+    "ConfigCrabOreChance": "Crab Ore Chance",
+    "ConfigCrabOreChanceDescription": "The daily chance an ore crab will drop an ore node (default: 0.5)",
+    "ConfigCrabTruffleChance": "Crab Truffle Chance",
+    "ConfigCrabTruffleChanceDescription": "The daily chance a truffle crab will drop a truffle (default: 0.5)",
+    "ConfigStickGingerChance": "Stick Bug Ginger Chance",
+    "ConfigStickGingerChanceDescription": "The daily chance a stick bug will drop a ginger (default: 1)",
+    "ConfigOreBonus": "Ore Node Bonus",
+    "ConfigOreBonusDescription": "Number of extra drops from ore and cinder nodes in monster hutch (default: 4)",
     "MonsterIncubator.name": "Monster Incubator",
     "MonsterIncubator.description": "Grows a variety of monsters based on the input item. Does not work outside a hutch!",
     "MonsterIncubator.InputWarning": "Requires 10: {{coalName}}, {{bugMeatName}}, {{cinderShardName}}, {{copperOreName}}, {{ironOreName}}, {{goldOreName}}, or {{iridiumOreName}} \nor 1: {{mummifiedBatName}}, {{truffleName}}, or {{gingerName}} \nto start incubation",
-    "MonsterIncubator.additionalItemWarning": "Requires {{additionalItemCount}} {{additionalItemName}} to start incubation"
+    "MonsterIncubator.additionalItemWarning": "Requires {{additionalItemCount}} {{additionalItemName}} to start incubation",
+    "WizardLetter.content": "@,^I know I can trust you with the blueprints for my latest invention, the 'Monster Incubator'. It reanimates monsters from their component parts. ^The transformation consumes 10 Void Essence and takes two days. As a safety measure, it only works in a 'Monster Hutch'.^^ Known reanimation subjects:\n *1 Mummified Bat -> Living Bat\n *10 Coal -> Dust Sprite\n 10 Bug Meat -> Spider\n *10 Cinder Shard -> Magma Sprite\n *10 Ore -> Rock Crab\n *1 Truffle -> Truffle Crab\n *1 Ginger -> Stick Bug^^   -M. Rasmodius, Wizard",
+    "WizardLetter.description": "Wizard's Invention",
+    "MonsterIncubator.instructions": "-~-Monster Incubator Guide-~-\n\n    The Monster Incubator reanimates monsters from one of their component parts. It consumes 10 Void Essence to power a transformation which will be complete after approximately two days. As a safety measure, it is designed to function only when placed within an appropriately secure location. Robin can construct a 'Monster Hutch' which can be used for breeding slimes as well as any monsters produced by the machine.\n\n Successful reanimation subjects:\n *1 Mummified Bat -> Living Bat\n *10 Coal -> Dust Sprite\n 10 Bug Meat -> Spider\n *10 Cinder Shard -> Magma Sprite\n *10 Ore -> Rock Crab\n *1 Truffle -> Truffle Crab\n *1 Ginger -> Stick Bug"
 }
