--- a/Agrivoltaics/i18n/default.json
+++ b/Agrivoltaics/i18n/default.json
@@ -1,8 +1,12 @@
 ﻿{
-    "MinBatteryCount.title": "Minimum Battery Count",
-    "MinBatteryCount.description": "Minimum number of batteries the Solar Panel produces on sunny days",
-    "MaxBatteryCount.title": "Maximum Battery Count",
-    "MaxBatteryCount.description": "Maximum number of batteries the Solar Panel produces on sunny days",
+    "SpringBatteryCount.title": "Spring Battery Count",
+    "SpringBatteryCount.description": "Number of batteries the Solar Panel produces on sunny days in spring",
+    "SummerBatteryCount.title": "Summer Battery Count",
+    "SummerBatteryCount.description": "Number of batteries the Solar Panel produces on sunny days in summer",
+    "FallBatteryCount.title": "Fall Battery Count",
+    "FallBatteryCount.description": "Number of batteries the Solar Panel produces on sunny days in fall",
+    "WinterBatteryCount.title": "Winter Battery Count",
+    "WinterBatteryCount.description": "Number of batteries the Solar Panel produces on sunny days in winter",
     "GrowGrass.title": "New Grass Growth",
     "GrowGrass.description": "Whether tiles under the Solar Panel has an increased chance of growing new grass",
     "GrassRate.title": "New Grass Growth Rate",
