--- a/Agrivoltaics/i18n/default.json
+++ b/Agrivoltaics/i18n/default.json
@@ -1,4 +1,16 @@
 ﻿{
+    "SolarPanelCost.title": "Solar Panel Cost",
+    "SolarPanelCost.description": "Cost for building the Solar Panel",
+    "RefinedQuartzAmount.title": "Refined Quartz Amount",
+    "RefinedQuartzAmount.description": "Amount of refined quartz for building Solar Panel",
+    "IronBarAmount.title": "Iron Bar Amount",
+    "IronBarAmount.description": "Amount of iron bars for building Solar Panel",
+    "GoldBarAmount.title": "Gold Bar Amount",
+    "GoldBarAmount.description": "Amount of gold bars for building Solar Panel",
+    "ConditionalBuild.title": "Conditional Unlock",
+    "ConditionalBuild.description": "Whether the condition defined by Unlock Condition must be met for the Solar Panel to be available in Robin's build menu",
+    "BuildCondition.title": "Unlock Condition",
+    "BuildCondition.description": "The condition that must be met for the Solar Panel to be available in Robin's build menu (Conditional Unlock must also be selected)",
     "SpringBatteryCount.title": "Spring Battery Count",
     "SpringBatteryCount.description": "Number of batteries the Solar Panel produces on sunny days in spring",
     "SummerBatteryCount.title": "Summer Battery Count",
@@ -7,8 +19,16 @@
     "FallBatteryCount.description": "Number of batteries the Solar Panel produces on sunny days in fall",
     "WinterBatteryCount.title": "Winter Battery Count",
     "WinterBatteryCount.description": "Number of batteries the Solar Panel produces on sunny days in winter",
+    "SpringBatteryCounter.title": "Spring Battery Counter",
+    "SpringBatteryCounter.description": "Number of sunny days it takes the Solar Panel to produce in spring",
+    "SummerBatteryCounter.title": "Summer Battery Counter",
+    "SummerBatteryCounter.description": "Number of sunny days it takes the Solar Panel to produce in summer",
+    "FallBatteryCounter.title": "Fall Battery Counter",
+    "FallBatteryCounter.description": "Number of sunny days it takes the Solar Panel to produce in fall",
+    "WinterBatteryCounter.title": "Winter Battery Counter",
+    "WinterBatteryCounter.description": "Number of sunny days it takes the Solar Panel to produce in winter",
     "GrowGrass.title": "New Grass Growth",
-    "GrowGrass.description": "Whether tiles under the Solar Panel has an increased chance of growing new grass",
+    "GrowGrass.description": "Whether tiles under the Solar Panel have an increased chance of growing new grass",
     "GrassRate.title": "New Grass Growth Rate",
     "GrassRate.description": "The chance a tile under the Solar Panel will grow new grass each day (in addition to the usual grass growth chance)",
     "SpreadGrass.title": "Grass Spreading",
@@ -16,5 +36,7 @@
     "SpreadRate.title": "Grass Spread Rate",
     "SpreadRate.description": "The chance grass under the Solar Panel has to spread each day (in addition to the usual grass spreading chance)",
     "RetentionIncrease.title": "Water Retention Increase",
-    "RetentionIncrease.description": "The increased chance a watered tilled soil tile under the Solar Panel will retain water the next day (this is in addition to any fertilizers or other modifications to water retention chances)"
+    "RetentionIncrease.description": "The increased chance a watered tilled soil tile under the Solar Panel will retain water the next day (this is in addition to any fertilizers or other modifications to water retention chances)",
+    "SeasonReset.title": "Season Reset",
+    "SeasonReset.description": "Whether to skip this mod's water retention check at the start of a new season"
 }
