--- a/Agrivoltaics/i18n/default.json
+++ b/Agrivoltaics/i18n/default.json
@@ -1,4 +1,6 @@
 ﻿{
+    "SolarPanel.name": "Large Solar Panel",
+    "SolarPanel.description": "A large solar panel which produces energy and provides shade for crops and livestock",
     "SolarPanelCost.title": "Solar Panel Cost",
     "SolarPanelCost.description": "Cost for building the Solar Panel",
     "RefinedQuartzAmount.title": "Refined Quartz Amount",
