--- a/MonsterHutchFramework/MonsterHutchFramework/i18n/default.json
+++ b/MonsterHutchFramework/MonsterHutchFramework/i18n/default.json
@@ -1,10 +1,31 @@
 {
-  "exclude": [
-    "**/bin",
-    "**/bower_components",
-    "**/jspm_packages",
-    "**/node_modules",
-    "**/obj",
-    "**/platforms"
-  ]
+    "MonsterHutch.name": "Monster Hutch",
+    "MonsterHutch.description": "A secure building for raising dangerous monsters.",
+    "MonsterHutchExpanded.name": "Monster Hutch Expansion",
+    "MonsterHutchExpanded.description": "Add a basement to your monster hutch. Kegs can be used there.",
+    "ConfigHutchInterior": "Hutch Interior Change",
+    "ConfigHutchInteriorDisabled": "Disabled",
+    "ConfigRandomizeMonsterPositions": "Randomize Monster Position\nIn Hutch Daily",
+    "ConfigRandomizeMonsterPositionsDescription": "Changes the position of all monsters in the hutch, so they are not clumped up in the top left corner",
+    "ConfigRandomizeOnlyModMonsterPositions": "Randomize Monster Position Does\nNot Affect Slimes",
+    "ConfigIncubatorIsAffectedByCoopmaster": "Is Affected By Coopmaster",
+    "ConfigIncubatorIsAffectedByCoopmasterDescription": "Whether Coopmaster should half the incubation duration (This is the case for base game slime incubator)",
+    "ConfigIncubatorAdditionalRequiredItemID": "Additional Required Item ID",
+    "ConfigIncubatorAdditionalRequiredItemIDDescription": "An item ID that also gets consumed by the incubator in addition to the monster item (by default: life elixir)",
+    "ConfigIncubatorAdditionalRequiredItemCount": "Additional Required Item Count",
+    "ConfigIncubatorAdditionalRequiredItemCountDescription": "If you set this to less than 1, then the above item is no longer required",
+    "ConfigIncubatorRecipe": "Recipe",
+    "ConfigIncubatorRecipeDescription": "The ingredients for the incubator recipe. It is on you that stardew valley can parse this as recipe ingredients!",
+    "ConfigIncubatorRecipeUnlock": "Recipe Unlock",
+    "ConfigIncubatorRecipeUnlockDescription": "The unlock method for the incubator recipe. It is on you that stardew valley can parse this as a recipe unlock method!",
+    "ConfigHutchSection": "Hutch Changes",
+    "ConfigIncubatorSection": "Monster Incubator",
+    "ConfigMonsterDropsSection": "Monster Drops",
+    "MonsterIncubator.name": "Monster Incubator",
+    "MonsterIncubator.description": "Grows a variety of monsters based on the input item. Does not work outside a hutch!",
+    "MonsterIncubator.InputWarning": "Requires 10: {{coalName}}, {{bugMeatName}}, {{cinderShardName}}, {{copperOreName}}, {{ironOreName}}, {{goldOreName}}, or {{iridiumOreName}} \nor 1: {{mummifiedBatName}}, {{truffleName}}, or {{gingerName}} \nto start incubation",
+    "MonsterIncubator.additionalItemWarning": "Requires {{additionalItemCount}} {{additionalItemName}} to start incubation",
+    "WizardLetter.content": "@,^^   I know I can trust you with the blueprints for my latest invention, the 'Monster Incubator'. It reanimates monsters from their component parts. ^The transformation consumes 10 Void Essence and takes two days. As a safety measure, it only works in a 'Monster Hutch'.^^ Known reanimation subjects:^   *1 Mummified Bat > Living Bat^   *10 Coal > Dust Sprite^   *10 Bug Meat > Spider^   *10 Cinder Shard > Magma Sprite^   *10 Ore > Rock Crab^   *1 Truffle > Truffle Crab^   *1 Ginger > Stick Bug^^   -M. Rasmodius, Wizard",
+    "WizardLetter.description": "Wizard's Invention",
+    "MonsterIncubator.instructions": "-~-Monster Incubator Guide-~-\n\n    The Monster Incubator reanimates monsters from one of their component parts. It consumes 10 Void Essence to power a transformation which will be complete after approximately two days. As a safety measure, it is designed to function only when placed within an appropriately secure location. Robin can construct a 'Monster Hutch' which can be used for breeding slimes as well as any monsters produced by the machine.\n\n Successful reanimation subjects:\n *1 Mummified Bat -> Living Bat\n *10 Coal -> Dust Sprite\n 10 Bug Meat -> Spider\n *10 Cinder Shard -> Magma Sprite\n *10 Ore -> Rock Crab\n *1 Truffle -> Truffle Crab\n *1 Ginger -> Stick Bug"
 }
