slime ring config

--- a/MonsterHutchFramework/i18n/default.json
+++ b/MonsterHutchFramework/i18n/default.json
@@ -8,19 +8,19 @@
     "ConfigReplaceHutchInterior": "Replace Hutch Interior",
     "ConfigReplaceHutchInteriorDescription": "Whether to double size of hutch interior to accommodate more monsters",
     "ConfigRandomizeMonsterPositions": "Randomize Monster Position\nIn Hutch Daily",
-    "ConfigRandomizeMonsterPositionsDescription": "Randomizes the position of all monsters in the hutch, so they are not clumped up",
+    "ConfigRandomizeMonsterPositionsDescription": "Randomizes the position of all \nmonsters in the hutch, so \nthey are not clumped up",
     "ConfigSkipRandomizeSlimePositions": "Randomize Monster Position \nDoes Not Affect Slimes",
     "ConfigIncubatorIsAffectedByCoopmaster": "Is Affected By Coopmaster",
-    "ConfigIncubatorIsAffectedByCoopmasterDescription": "Whether coopmaster profession cuts the incubation time in half (like with slime incubator)",
+    "ConfigIncubatorIsAffectedByCoopmasterDescription": "Whether coopmaster profession \ncuts the incubation time in \nhalf (like with slime incubator)",
     "ConfigIncubatorWobblesWhileIncubating": "Incubator Wobbles While Working",
     "ConfigIncubatorAdditionalRequiredItemID": "Additional Required Item ID",
-    "ConfigIncubatorAdditionalRequiredItemIDDescription": "The item ID that also gets consumed as fuel by the incubator in addition to the monster item (default: void essence)",
+    "ConfigIncubatorAdditionalRequiredItemIDDescription": "The item ID that also gets \nconsumed as fuel by the incubator \nin addition to the monster item \n(default: void essence)",
     "ConfigIncubatorAdditionalRequiredItemCount": "Additional Required Item Count",
-    "ConfigIncubatorAdditionalRequiredItemCountDescription": "Number of above item that is consumed; if less than 1, the above item is no longer required (default: 10)",
+    "ConfigIncubatorAdditionalRequiredItemCountDescription": "Number of above item that is \nconsumed; if less than 1, the above \nitem is no longer required \n(default: 10)",
     "ConfigIncubatorRecipe": "Crafting Recipe",
-    "ConfigIncubatorRecipeDescription": "The crafting recipe for the monster incubator",
+    "ConfigIncubatorRecipeDescription": "The crafting recipe for \nthe monster incubator",
     "ConfigIncubatorRecipeUnlock": "Recipe Unlock",
-    "ConfigIncubatorRecipeUnlockDescription": "The unlock condition for the monster incubator recipe",
+    "ConfigIncubatorRecipeUnlockDescription": "The unlock condition for \nthe monster incubator recipe",
     "ConfigHutchSection": "Hutch Changes",
     "ConfigIncubatorSection": "Monster Incubator",
     "ConfigMonsterDropsSection": "Monster Drops",
@@ -33,5 +33,7 @@
     "MonsterIncubator.instructions": "-~-Monster Incubator Guide-~-\n\n    The Monster Incubator reanimates monsters from one of their component parts, consuming 10 Void Essence to power the transformation. As a safety measure, I designed it to only function within a 'Monster Hutch'.\n\n Successful reanimation subjects:\n *1 Mummified Bat -> Living Bat\n *10 Coal -> Dust Sprite\n 10 Bug Meat -> Spider\n *10 Cinder Shard -> Magma Sprite\n *10 Ore -> Rock Crab\n *1 Truffle -> Truffle Crab\n *1 Ginger -> Stick Bug",
     "ConfigRingSection": "Charmer Rings",
     "ConfigLethalRings": "Lethal Rings",
-    "ConfigLethalRingsDescription": "Whether wearing a charmer ring allows you to deal damage to the relevant monster"
+    "ConfigLethalRingsDescription": "Whether wearing a charmer \nring allows you to deal damage \nto the relevant monster",
+    "VanillaSlimeRing": "Vanilla Slime Ring",
+    "ConfigVanillaSlimeRingDescription": "Whether the Slime Charmer Ring \nretains its vanilla properties \nallowing the player to \ndamage slimes while worn"
 }
