--- a/MonsterHutchFramework/i18n/default.json
+++ b/MonsterHutchFramework/i18n/default.json
@@ -5,11 +5,16 @@
     "MonsterHutchExpanded.description": "Adds a basement to your monster hutch. Monsters cannot go down the stairs but casks will work there.",
     "ConfigHutchExpansion": "Monster Hutch Expansion",
     "ConfigHutchExpansionDescription": "Whether to add a Monster Hutch upgrade that adds a basement.",
+    "ConfigHutchSlimeCapacity": "Slime Capacity",
+    "ConfigHutchSlimeCapacityDescription": "The maximum slime capacity for the Monster Hutch",
+    "ConfigHutchMonsterCapacity": "Monster Capacity",
+    "ConfigHutchMonsterCapacityDescription": "The total monster capacity (including \nslimes) for the Monster Hutch",
     "ConfigReplaceHutchInterior": "Replace Hutch Interior",
     "ConfigReplaceHutchInteriorDescription": "Whether to double size of hutch interior to accommodate more monsters",
-    "ConfigRandomizeMonsterPositions": "Randomize Monster Position\nIn Hutch Daily",
-    "ConfigRandomizeMonsterPositionsDescription": "Randomizes the position of all \nmonsters in the hutch, so \nthey are not clumped up",
-    "ConfigSkipRandomizeSlimePositions": "Randomize Monster Position \nDoes Not Affect Slimes",
+    "ConfigRandomizeMonsterPositions": "Randomize Monster Positions",
+    "ConfigRandomizeMonsterPositionsDescription": "Randomizes the position of all \nmonsters in the hutch daily, \nso they don't clump up",
+    "ConfigSkipRandomizeSlimePositions": "Skip Randomize Slime Positions",
+    "ConfigSkipRandomizeSlimePositionsDescription": "If Randomize Monster Positions is \nturned on, whether slimes are \nskipped and remain in their original position",
     "ConfigIncubatorIsAffectedByCoopmaster": "Is Affected By Coopmaster",
     "ConfigIncubatorIsAffectedByCoopmasterDescription": "Whether coopmaster profession \ncuts the incubation time in \nhalf (like with slime incubator)",
     "ConfigIncubatorWobblesWhileIncubating": "Incubator Wobbles While Working",
