--- a/MonsterHutchFramework/i18n/default.json
+++ b/MonsterHutchFramework/i18n/default.json
@@ -15,6 +15,8 @@
     "ConfigRandomizeMonsterPositionsDescription": "Randomizes the position of all \nmonsters in the hutch daily, \nso they don't clump up",
     "ConfigSkipRandomizeSlimePositions": "Skip Randomize Slime Positions",
     "ConfigSkipRandomizeSlimePositionsDescription": "If Randomize Monster Positions is \nturned on, whether slimes are \nskipped and remain in their original position",
+    "ConfigDoubleNodeDrops": "Double Node Drops",
+    "ConfigDoubleNodeDropsDescription": "Whether breaking nodes (ores, gems, geodes, etc) yields double in the Monster Hutch",
     "ConfigIncubatorIsAffectedByCoopmaster": "Is Affected By Coopmaster",
     "ConfigIncubatorIsAffectedByCoopmasterDescription": "Whether coopmaster profession \ncuts the incubation time in \nhalf (like with slime incubator)",
     "ConfigIncubatorWobblesWhileIncubating": "Incubator Wobbles While Working",
