--- a/MonsterHutchFramework/i18n/default.json
+++ b/MonsterHutchFramework/i18n/default.json
@@ -3,44 +3,41 @@
     "MonsterHutch.description": "A secure building for raising dangerous monsters.",
     "MonsterHutchExpanded.name": "Monster Hutch Basement",
     "MonsterHutchExpanded.description": "Adds a basement to your monster hutch. Monsters cannot go down the stairs but casks will work there.",
+    "ConfigHutchSection": "Hutch Changes",
     "ConfigHutchExpansion": "Monster Hutch Expansion",
-    "ConfigHutchExpansionDescription": "Whether to add a Monster Hutch upgrade that adds a basement.",
+    "ConfigHutchExpansionDescription": "Whether Robin's build menu \nshould include a Monster Hutch\n upgrade that adds a basement.",
     "ConfigHutchSlimeCapacity": "Slime Capacity",
-    "ConfigHutchSlimeCapacityDescription": "The maximum slime capacity for the Monster Hutch",
+    "ConfigHutchSlimeCapacityDescription": "The maximum slime capacity \nfor the Monster Hutch",
     "ConfigHutchMonsterCapacity": "Monster Capacity",
     "ConfigHutchMonsterCapacityDescription": "The total monster capacity (including \nslimes) for the Monster Hutch",
-    "ConfigReplaceHutchInterior": "Replace Hutch Interior",
-    "ConfigReplaceHutchInteriorDescription": "Whether to double size of hutch interior to accommodate more monsters",
     "ConfigRandomizeMonsterPositions": "Randomize Monster Positions",
     "ConfigRandomizeMonsterPositionsDescription": "Randomizes the position of all \nmonsters in the hutch daily, \nso they don't clump up",
     "ConfigSkipRandomizeSlimePositions": "Skip Randomize Slime Positions",
     "ConfigSkipRandomizeSlimePositionsDescription": "If Randomize Monster Positions is \nturned on, whether slimes are \nskipped and remain in their original position",
     "ConfigDoubleNodeDrops": "Double Node Drops",
-    "ConfigDoubleNodeDropsDescription": "Whether breaking nodes (ores, gems, geodes, etc) yields double in the Monster Hutch",
+    "ConfigDoubleNodeDropsDescription": "Whether breaking nodes \n(ores, gems, geodes, etc) yields \ndouble in the Monster Hutch",
+    "ConfigIncubatorSection": "Monster Incubator",
     "ConfigIncubatorIsAffectedByCoopmaster": "Is Affected By Coopmaster",
     "ConfigIncubatorIsAffectedByCoopmasterDescription": "Whether coopmaster profession \ncuts the incubation time in \nhalf (like with slime incubator)",
     "ConfigIncubatorWobblesWhileIncubating": "Incubator Wobbles While Working",
     "ConfigIncubatorAdditionalRequiredItemID": "Additional Required Item ID",
-    "ConfigIncubatorAdditionalRequiredItemIDDescription": "The item ID that also gets \nconsumed as fuel by the incubator \nin addition to the monster item \n(default: void essence)",
+    "ConfigIncubatorAdditionalRequiredItemIDDescription": "The item ID that also gets \nconsumed as fuel by the incubator \nin addition to the input item",
     "ConfigIncubatorAdditionalRequiredItemCount": "Additional Required Item Count",
-    "ConfigIncubatorAdditionalRequiredItemCountDescription": "Number of above item that is \nconsumed; if less than 1, the above \nitem is no longer required \n(default: 10)",
+    "ConfigIncubatorAdditionalRequiredItemCountDescription": "Number of above item that is \nconsumed; if less than 1, the above \nitem is no longer required",
     "ConfigIncubatorRecipe": "Crafting Recipe",
     "ConfigIncubatorRecipeDescription": "The crafting recipe for \nthe monster incubator",
     "ConfigIncubatorRecipeUnlock": "Recipe Unlock",
     "ConfigIncubatorRecipeUnlockDescription": "The unlock condition for \nthe monster incubator recipe",
-    "ConfigHutchSection": "Hutch Changes",
-    "ConfigIncubatorSection": "Monster Incubator",
-    "ConfigMonsterDropsSection": "Monster Drops",
+    "ConfigRingSection": "Charmer Rings",
+    "ConfigLethalRings": "Lethal Rings",
+    "ConfigLethalRingsDescription": "Whether wearing a charmer \nring allows you to deal damage \nto the relevant monster",
+    "ConfigVanillaSlimeRing": "Vanilla Slime Ring",
+    "ConfigVanillaSlimeRingDescription": "Whether the Slime Charmer Ring \nretains its vanilla properties \nallowing the player to \ndamage slimes while worn",
     "MonsterIncubator.name": "Monster Incubator",
     "MonsterIncubator.description": "Creates a variety of monsters based on the input item. Does not work outside a hutch!",
     "MonsterIncubator.InputWarning": "Not a valid input for incubation",
     "MonsterIncubator.additionalItemWarning": "Requires {{additionalItemCount}} {{additionalItemName}} to start incubation",
     "WizardLetter.content": "@,^^   I know I can trust you with the blueprints for my latest invention, the 'Monster Incubator'. It recreates and revivifies monsters from their component parts by harnessing the arcane energy of Void Essence. As a safety measure, it only works in a 'Monster Hutch'.^^   -M. Rasmodius, Wizard",
     "WizardLetter.description": "Wizard's Invention",
-    "MonsterIncubator.instructions": "-~-Monster Incubator Guide-~-\n\n    The Monster Incubator reanimates monsters from one of their component parts, consuming 10 Void Essence to power the transformation. As a safety measure, I designed it to only function within a 'Monster Hutch'.\n\n Successful reanimation subjects:\n *1 Mummified Bat -> Living Bat\n *10 Coal -> Dust Sprite\n 10 Bug Meat -> Spider\n *10 Cinder Shard -> Magma Sprite\n *10 Ore -> Rock Crab\n *1 Truffle -> Truffle Crab\n *1 Ginger -> Stick Bug",
-    "ConfigRingSection": "Charmer Rings",
-    "ConfigLethalRings": "Lethal Rings",
-    "ConfigLethalRingsDescription": "Whether wearing a charmer \nring allows you to deal damage \nto the relevant monster",
-    "VanillaSlimeRing": "Vanilla Slime Ring",
-    "ConfigVanillaSlimeRingDescription": "Whether the Slime Charmer Ring \nretains its vanilla properties \nallowing the player to \ndamage slimes while worn"
+    "MonsterIncubator.instructions": "-~-Monster Incubator Guide-~-\n\n    The Monster Incubator reanimates monsters from one of their component parts, consuming 10 Void Essence to power the transformation. As a safety measure, I designed it to only function within a 'Monster Hutch'.\n\n Successful reanimation subjects:\n *1 Mummified Bat -> Living Bat\n *10 Coal -> Dust Sprite\n 10 Bug Meat -> Spider\n *10 Cinder Shard -> Magma Sprite\n *10 Ore -> Rock Crab\n *1 Truffle -> Truffle Crab\n *1 Ginger -> Stick Bug"
 }
